Remove unexpected defaults in Java codebase. (#134)
* Remove unexpected defaults in Java codebase.

* Remove unexpected defaults in Java codebase.

* Revert part of Security context change.

* Use isEmpty instead of equals to empty list in assertions.

* Fix integration test breakage.

* Make updates per review.

* Remove changed code.

* Add newline.